--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <center>
     <a href="página web.html"></a>
     <nav>
-        <a href="Inicio.html">Inincio</a>
+        <a href="index.html">Inincio</a>
         <a href="Nombre científico.html">Nombre científico</a>
         <a href="Clasificación.html">Clasificación</a>
         <a href="Dieta.html">Dieta</a>
